# premium_primitives

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  release.md  release_notes.rst
.github/workflows/: auto_approve_dependency_PRs.yaml  install_test.yaml  latest_dependency_checker.yaml  lint_check.yaml  minimum_dependency_checker.yaml  release.yaml  release_notes_updated.yaml  scheduler.yaml  unit_tests_with_latest_deps.yaml
docs/: release_notes.rst
premium_primitives/: __init__.py  country_code_to_continent.py  country_code_to_income.py  country_code_to_population.py  diversity_score.py  latlong_to_city.py  latlong_to_countrycode.py  latlong_to_county.py  latlong_to_state.py  lsa.py  part_of_speech_count.py  phone_number_to_area.py  phone_number_to_country.py  polarity_score.py  postalcode_to_household_income.py  postalcode_to_latlong.py  postalcode_to_per_capita_income.py  postalcode_to_state.py  sub_region_code_to_median_household_income.py  sub_region_code_to_per_capita_income.py  sub_region_code_to_region.py  utils.py
premium_primitives/data/: GNI_per_capita.csv  census_regions.csv  country_to_continent.csv  postalcode_to_household_income_data.csv  postalcode_to_per_capita_income_data.csv  sub_region_code_to_median_household_income_data.csv  sub_region_code_to_per_capita_income_data.csv
premium_primitives/tensorflow/: __init__.py  universal_sentence_encoder.py
premium_primitives/tests/: conftest.py  test_country_code_to_continent.py  test_country_code_to_income.py  test_country_code_to_population.py  test_diversity_score.py  test_elmo.py  test_latlong_to_city.py  test_latlong_to_countrycode.py  test_latlong_to_county.py  test_latlong_to_state.py  test_lsa.py  test_mean_characters_per_sentence.py  test_number_of_sentences.py  test_part_of_speech_count.py  test_phone_number_to_area.py  test_phone_number_to_country.py  test_polarity_score.py  test_postalcode_to_household_income.py  test_postalcode_to_latlong.py  test_postalcode_to_per_capita_income.py  test_postalcode_to_state.py  test_stopword_count.py  test_sub_region_code_to_median_household_income.py  test_sub_region_code_to_per_capita_income.py  test_sub_region_code_to_region.py  test_universal_sentence_encoder.py  test_version copy.py  test_version.py  utils.py
premium_primitives/tests/requirement_files/: latest_requirements.txt  minimum_core_requirements.txt  minimum_test_requirements.txt
