[project]
name = "premium_primitives"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
authors = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
maintainers = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
keywords = ["feature engineering", "data science", "machine learning"]
license = {text = "BSD 3-clause"}
requires-python = ">=3.8,<4"
dependencies = [
    "numpy >= 1.21.0",
    "pandas >= 1.5.0, <2.0.0",
    "featuretools >= 1.5.0, <2.0.0",
    "woodwork >= 0.8.1",
    "nltk >= 3.4.5",
    "scikit-learn >= 0.20.0",
    "phone-iso3166 >= 0.3",
    "phonenumbers >= 8.10.6",
    "reverse_geocoder >= 1.5.1",
    "zipcodes >= 1.0.5",
]

[project.optional-dependencies]
test = [
    "pip >= 22.0.2",
    "pytest >= 7.1.2",
    "pytest-xdist >= 2.5.0",
    "pytest-cov >= 3.0.0",
]
dev = [
    "ruff >= 0.0.239",
    "black[jupyter] >= 23.1.0",
    "pre-commit >= 2.20.0",
    "premium_primitives[test]"
]

[project.urls]
"Documentation" = "https://featuretools.alteryx.com"
"Source Code"= "https://github.com/alteryx/premium_primitives/"
"Changes" = "https://github.com/alteryx/premium_primitives/blob/main/release_notes.rst"
"Issue Tracker" = "https://github.com/alteryx/premium_primitives/issues"
"Twitter" = "https://twitter.com/alteryxoss"
"Chat" = "https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA"

[project.entry-points."featuretools_primitives"]
premium_primitives = "premium_primitives"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.csv",
    "*.txt",
]
"premium_primitives" = [
    "README.md",
    "data/nltk_data/**/*",
    "data/*.csv",
    "data/*.txt",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
    "unpacked_sdist",
    "dist",
]

[tool.setuptools.dynamic]
version = {attr = "premium_primitives.version.__version__"}

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "premium_primitives/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
ignore = ["E501"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
src = ["premium_primitives"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "I001", "E501"]

[tool.ruff.isort]
known-first-party = ["premium_primitives"]

[tool.coverage.run]
source = ["premium_primitives"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"
